@startuml

class CollectController {
  - logger: Logger
  - collectService: CollectService
  + collectCar(authorizationHeader: String, request: Map<String, Object>): ResponseEntity<String>
}

interface CollectService {
  + collectCar(carId: Integer, userId: Integer, name: String, score: Float): RecommendationHistory
}

class CollectServiceImpl {
  - collectRepository: CollectRepository
  + collectCar(carId: Integer, userId: Integer, name: String, score: Float): RecommendationHistory
}

class RecommendationHistory {
  - id: Integer
  - userId: Integer
  - carId: Integer
  - score: Float
  - name: String
  - timestamp: Date
  + getId(): Integer
  + setId(id: Integer): void
  + getUserId(): Integer
  + setUserId(user_Id: Integer): void
  + getCarId(): Integer
  + setCarId(carId: Integer): void
  + getCarName(): String
  + setCarName(name: String): void
  + getScore(): Float
  + setScore(score: Float): void
  + getTimestamp(): Date
  + setTimestamp(timestamp: Date): void
}

interface CollectRepository {
  <<extends JpaRepository<RecommendationHistory, Integer>>>
}

CollectController --> CollectService
CollectService <|.. CollectServiceImpl
CollectServiceImpl --> CollectRepository
CollectServiceImpl --> RecommendationHistory
CollectRepository --> RecommendationHistory

@enduml